Tue Jan 25 12:57:05 2005  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/Codeset_Manager.cpp:
          Moved default selection of the UTF16_BOM codeset translator from
          get_char_trans() to get_wchar_trans() where it belongs. Thanks
          to Olivier Brunet <o.brunet@free.fr> for finding this.

Tue Jan 25 09:59:28 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/Event_Service/Event_Service.cpp:
	* orbsvcs/FT_ReplicationManager/FT_FaultConsumer.cpp:
	* orbsvcs/Fault_Detector/FT_FaultDetectorFactory_i.cpp:
	* orbsvcs/Fault_Notifier/FT_Notifier_i.cpp:
	* orbsvcs/IFR_Service/be_init.cpp:
	* orbsvcs/IFR_Service/ifr_adding_visitor.cpp:
	* orbsvcs/IFR_Service/ifr_adding_visitor_exception.cpp:
	* orbsvcs/IFR_Service/ifr_adding_visitor_operation.cpp:
	* orbsvcs/IFR_Service/ifr_adding_visitor_structure.cpp:
	* orbsvcs/IFR_Service/ifr_adding_visitor_union.cpp:
	* orbsvcs/ImplRepo_Service/Forwarder.cpp:
	* orbsvcs/ImplRepo_Service/Locator_Repository.cpp:
	* orbsvcs/LoadBalancer/LoadManager.cpp:
	* orbsvcs/LoadBalancer/LoadMonitor.cpp:
	* orbsvcs/Logging_Service/Basic_Logging_Service/Basic_Logging_Service.cpp:
	* orbsvcs/Logging_Service/Event_Logging_Service/Event_Logging_Service.cpp:
	* orbsvcs/Logging_Service/Notify_Logging_Service/Notify_Logging_Service.cpp:
	* orbsvcs/Logging_Service/RTEvent_Logging_Service/RTEvent_Logging_Service.cpp:
	* orbsvcs/PSS/PSDL_Datastore.cpp:
	* orbsvcs/PSS/PSDL_Interface_Visitor.cpp:
	* orbsvcs/PSS/PSDL_Struct_Visitor.cpp:
	* orbsvcs/Scheduling_Service/Scheduling_Service.cpp:
	* orbsvcs/examples/FaultTolerance/RolyPoly/ReplicaController.cpp:
	* orbsvcs/orbsvcs/AV/AVStreams_i.cpp:
	* orbsvcs/orbsvcs/AV/AV_Core.cpp:
	* orbsvcs/orbsvcs/AV/Endpoint_Strategy_T.cpp:
	* orbsvcs/orbsvcs/AV/FlowSpec_Entry.cpp:
	* orbsvcs/orbsvcs/AV/MCast.cpp:
	* orbsvcs/orbsvcs/AV/QoS_UDP.cpp:
	* orbsvcs/orbsvcs/AV/RTCP.cpp:
	* orbsvcs/orbsvcs/AV/RTCP_Channel.cpp:
	* orbsvcs/orbsvcs/AV/RTCP_Packet.cpp:
	* orbsvcs/orbsvcs/AV/RTP.cpp: